Fix tabbing issue when movie is collapsed

--- a/src/components/Media/Media.module.scss
+++ b/src/components/Media/Media.module.scss
@@ -5,6 +5,7 @@
   grid-template-rows: fit-content(100px) auto;
   grid-template-columns: min(25%, 250px) auto;
   opacity: 0;
+  visibility: hidden;
   position: absolute;
   padding: 30px 30px 30px 80px;
   top: 0;
@@ -15,6 +16,7 @@
 }
 
 :global(.media):global(.active) .container {
+  visibility: visible;
   opacity: 1;
   transition-delay: 0.2s;
   transition-property: opacity ease-in 0.3s;
